interviewprep/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nav-integration
  labels:
    name: nav-integration
    purpose: enterprise-integration-platform
